subiendo mas noticias

--- a/index.html
+++ b/index.html
@@ -51,15 +51,20 @@
          <h2>Corea del Norte:"La guerra ternonuclear puede estallar en culquier momento"</h2>
         </div>
       </div>
+      <div class="edit">
+          <h4 class="editorial">Editorial</h4>
+      </div>
       <div class="box cuatro">
          <div class="parrafo-cuatro">
          <h4>Libertad y Extorsion <div class="sprite sprite-senora"></div></h4>
         </div>
       </div>
-
+      <div class="box cinco">
+         <div class="parrafo-cinco">
+         <h4>Evaluan prision preventivas para alcalde de chilca y miembros de su banda 'Los Rucos' <div class="sprite sprite-alcalde-de-chilca"></div></h4>
+        </div>
+      </div>
     </div>
-
   </div>
-
 </body>
 </html>
