--- a/index.html
+++ b/index.html
@@ -12,7 +12,12 @@
 <body>
   <header>
       <div class="sprite sprite-logo"></div>
-      <i class="fa fa-youtube-play" aria-hidden="true"></i>
+      <div class ="iconos ">
+        <span class="icon-twitter-with-circle icono-enlace"></span>
+        <span class="icon-facebook-with-circle icono-enlace"></span>
+        <span class="icon-youtube-with-circle icono-enlace"></span>
+        <span class="icon-instagram-with-circle icono-enlace"></span>
+      </div>
     </div>
     <button type="button" class="search">Buscar </button>
   </header>
@@ -61,8 +66,9 @@
       </div>
       <div class="box cinco">
          <div class="parrafo-cinco">
-         <h4>Evaluan prision preventivas para alcalde de chilca y miembros de su banda 'Los Rucos' <div class="sprite sprite-alcalde-de-chilca"></div></h4>
-        </div>
+         <h4>Evaluan prision preventivas para alcalde de chilca y miembros de su banda 'Los Rucos'</h4>
+         <div class="sprite sprite-alcalde-de-chilca"></div>
+         </div>
       </div>
     </div>
   </div>
